refactor: simplify permission model & replace Infinispan with Valkey
- Permission: domain.resource:action -> resource:action
- Remove domain column from sys_permission (V1 only, no migration)
- Replace Infinispan with Valkey/Redis for cache (permission snapshot, refresh token, login attempt, authority version)
- Rewrite cache stores using Quarkus Redis client
- Remove Infinispan example (BookSearchService, Ickle queries, ProtoStream)
- Update docker-compose to use valkey/valkey image
- Simplify JVM/Docker config (remove Elytron SASL, JDK 25 workarounds)

Made-with: Cursor